RESOLVED FIXED243356
[iOS Mail] Selection does not change when tapping in compose with keyboard is not already shown
https://bugs.webkit.org/show_bug.cgi?id=243356
Summary [iOS Mail] Selection does not change when tapping in compose with keyboard is...
Wenson Hsieh
Reported 2022-07-29 15:10:11 PDT
Attachments
Wenson Hsieh
Comment 1 2022-07-29 15:24:23 PDT
EWS
Comment 2 2022-07-29 18:34:27 PDT
Committed 252972@main (8d38f657f8ee): <https://commits.webkit.org/252972@main> Reviewed commits have been landed. Closing PR #2864 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.